# crudik

./: .env  .env.example  .importlinter  Dockerfile  Dockerfile.test  README.md  docker-compose.base.yml  docker-compose.test.yml  docker-compose.yml  justfile  pyproject.toml  sonar-project.properties
.config/: .env.oauthproxy  config.toml  init-db.sql  nginx.conf  oauth2-proxy.toml
.config/app/: .env  .env.local  config.local.toml  config.toml
.github/workflows/: lint.yml  lint_and_test.yml  lint_test_deploy.yml  test.yml
docker/: Dockerfile  docker-compose.base.yml  docker-compose.test.yml  docker-compose.tests.yml  docker-compose.yml  oauth2-proxy.Dockerfile
src/crudik/adapters/: api_client.py  config_loader.py  logs.py  tracing.py
src/crudik/adapters/auth/: event_handlers.py  handlers.py  model.py
src/crudik/adapters/auth/common/gateway/: auth_user.py
src/crudik/adapters/auth/errors/: auth_user.py  base.py
src/crudik/adapters/auth/idp/: auth_user.py  base.py  user.py
src/crudik/adapters/config/: base.py  loader.py
src/crudik/adapters/db/: config.py
src/crudik/adapters/db/alembic/migrations/: env.py
src/crudik/adapters/db/gateway/: auth_user.py  base.py  user.py
src/crudik/adapters/db/models/: __init__.py  auth_user.py  user.py
src/crudik/adapters/di/: container.py
src/crudik/adapters/di/providers/: adapter.py  config.py  interactor.py
src/crudik/adapters/errors/http/: response.py
src/crudik/application/: ping.py  read_user.py
src/crudik/application/common/: idp.py  interactor.py  uow.py
src/crudik/application/common/event/: user.py
src/crudik/application/common/gateway/: user.py
src/crudik/application/errors/: user.py
src/crudik/application/user/: create.py  read.py
src/crudik/bootstrap/: cli.py  fast_api.py
src/crudik/bootstrap/config/: loader.py
src/crudik/bootstrap/di/: container.py
src/crudik/bootstrap/di/providers/: adapter.py  config.py  interactor.py
src/crudik/bootstrap/entrypoint/: fast_api.py
src/crudik/domain/: __init__.py  base.py  user.py
src/crudik/domain/errors/: base.py
src/crudik/entities/: base.py  config.py  user.py
src/crudik/entities/errors/: base.py
src/crudik/main/: cli.py  fast_api.py
src/crudik/main/config/: loader.py
src/crudik/main/di/: container.py
src/crudik/main/di/providers/: config.py  interactor.py
src/crudik/presentation/fast_api/: __init__.py  config.py  error_handlers.py
src/crudik/presentation/fast_api/routers/: root.py  user.py
tests/: api_client.py
tests/e2e/: conftest.py
tests/integration/: api_client.py  conftest.py  test_ping.py  test_probe.py
tests/integration/user/: test_create.py  test_read.py  utils.py
tests/unit/: test_ping.py
