[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project]
name = 'crudik'
version = '0.0.1'
requires-python = '>=3.13'
dependencies = [
    "dishka==1.7.2",
    "fastapi[standard]==0.123.0",
    "asyncpg==0.31.0",
    "sqlalchemy==2.0.44",
    "alembic==1.17.2",
    "redis==7.1.0",
    "aiohttp==3.13.2",
    "adaptix==3.0.0b11",
    "bazario==0.4.2",
    "toml-rs==0.1.0",
]

[project.optional-dependencies]
lint = ['ruff==0.14.7', 'mypy==1.19.0']
test = ['pytest==9.0.1', 'pytest-asyncio==1.3.0']
dev = ['crudik[test,lint]']
ci = ['crudik[dev]']

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[tool.mypy]
ignore_missing_imports = true
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true

enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
    "explicit-override",
    "mutable-override",
    "unimported-reveal",
    "deprecated",
]

files = ["src/", "tests/"]
exclude = ["src/crudik/adapters/db/alembic/migrations/versions/"]

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
exclude = ["src/crudik/adapters/db/alembic/**/*.py"]

[tool.ruff.lint]
select = ['ALL']

ignore = [
    # Strange and obscure
    'D100',
    'D104',
    'D101',
    'D105',
    'D102',
    'D401',
    'RET504',
    'D103',
    'PLR0913',
    'S101',
    'EM101',
    'TRY003',
    'D107',
    'ARG002',
    'RUF001',
    'PLR0912',
    'C901',
    'PGH003',
    # Does not work correctly
    'S104',
    'ANN401',
]

[[project.authors]]
name = 'lubaskinc0de'
email = 'lubaskincorporation@gmail.com'

[project.scripts]
crudik = "crudik.bootstrap.entrypoint.cli:main"
